--- a/client/src/components/ItemProfile/ItemProfile.scss
+++ b/client/src/components/ItemProfile/ItemProfile.scss
@@ -1,77 +1,77 @@
 @import "@/scss/global.scss";
 
 .medium-card {
-    background: $card-color;
-    box-shadow: $box-drop-shadow;
-    padding: 20px;
-    font-family: $body-family;
+	background: $card-color;
+	box-shadow: $box-drop-shadow;
+	padding: 20px;
+	font-family: $body-family;
 
     .card-header {
-        border: none;
-        box-shadow: none;
-        display: flex;
+			border: none;
+			box-shadow: none;
+			display: flex;
 
         .card-header-title {
-            padding: 0 10px;
-            display: block;
-            flex-direction: column;
+					padding: 0 10px;
+					display: block;
+					flex-direction: column;
         }
 
         .card-header-icon {
-            padding: 0px;
+					padding: 0px;
         }
     }
 
     .card-content {
-        padding: 15px 0;
+			padding: 15px 0!important;
     }
 
     .card-image {
-        margin-top: 10px
+			margin-top: 10px
     }
 }
 
 .card-creator {
-    display: block;
-    font-weight: normal;
+	display: block;
+	font-weight: normal;
 }
 
 .timestamp {
-    padding: 0;
-    text-transform: uppercase;
+	padding: 0;
+	text-transform: uppercase;
 }
 
 .category-tag {
-    text-transform: uppercase;
-    font-size: 12px;
-    font-weight: bold;
+	text-transform: uppercase;
+	font-size: 12px;
+	font-weight: bold;
 }
 
 .item-title {
-    font-size: 18px;
-    font-weight: bold;
-    display: block;
+	font-size: 18px;
+	font-weight: bold;
+	display: block;
 }
 
 .media {
-    padding: 10px;
+	padding: 10px;
 }
 
 .button-menu {
-    margin-left: auto;
-    padding-bottom: 25px;
+	margin-left: auto;
+	padding-bottom: 25px;
 }
 
 @media screen and (min-width: 768px) {
-    .medium-card {
-        margin: $margin $page-margin;
-    }
+	.medium-card {
+		margin: $margin $page-margin;
+	}
 }
 
 .image {
-    margin: 10px 0;
+	margin: 10px 0;
 }
 
 .tag-spacing {
-    margin-bottom: 15px;
+	margin-bottom: 15px;
 }
