--- a/client/src/scss/_base.scss
+++ b/client/src/scss/_base.scss
@@ -41,7 +41,23 @@ a:hover {
     text-transform: uppercase;
     color: $primary-color;
     text-align: center;
-    margin-bottom: 30px;
+    margin-bottom: 28px;
+}
+
+.logotype {
+	font-family: $logotype-font;
+	margin-left: 10px;
+	padding-bottom: 5px;
+	font-weight: 700;
+	letter-spacing: 0.1em;
+	font-size: 26px;
+	color: $primary-color;
+	text-transform: lowercase;
+	align-self: center;
+}
+
+.logotype:hover {
+	color: $primary-color-dark;
 }
 
 .material-icons.md-18 { font-size: 18px; }
